--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,8 @@
   </main>
 
   <ul>
-    <li>fix menu/bootstrap ui</li>
-    <li>implement negatives!</li>
-    <li>track #items and date-done</li>
+    <li>mobile view</li>
     <li>persist to firebase by user</li>
-    <li>tweet / share?</li>
   </ul>
 
 seed: https://github.com/r-park/todo-angular2-firebase
